--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
-﻿/*
-Zerotheme.com | Free Html5 Responsive Templates
-Author URI: http://www.zerotheme.com/
-*/
+﻿
 @import url(https://fonts.googleapis.com/css?family=Oswald);
 @import url(https://fonts.googleapis.com/css?family=Rubik+One);
 /* ---------------------------------------------------------------------------- */
